# pastebom.com

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CRON_AGENT_INSTRUCTIONS.md  Cargo.toml  Dockerfile  Dockerfile.rust  IBOM_GIST_SPEC.md  README.md  dev.sh  discover_and_upload.py  docker-compose.rust.yml  docker-compose.yml  requirements.txt  scan_github_repo.py
.cargo/: audit.toml
.github/workflows/: build-container.yml  ci.yml  gds-corpus.yml  security-audit.yml
app/: __init__.py  config.py  main.py
app/models/: bom.py
app/services/: generator.py  storage.py
app/static/: index.html
crates/gds-viewer/: Cargo.toml  Trunk.toml  index.html  style.css
crates/gds-viewer/src/: main.rs  manifest.rs  state.rs  transform.rs
crates/pcb-extract/: Cargo.toml
crates/pcb-extract/src/: bom.rs  error.rs  lib.rs  main.rs  svg.rs  thumbnail.rs  types.rs
crates/pcb-extract/src/parsers/: eagle.rs  eagle_binary.rs  easyeda.rs  gdsii.rs  kicad.rs  kicad_sexpr.rs  mod.rs
crates/pcb-extract/src/parsers/altium/: layers.rs  mod.rs  records.rs
crates/pcb-extract/src/parsers/gdsii/: bsp.rs  reader.rs  tile.rs  tiler.rs  tileset.rs
crates/pcb-extract/src/parsers/gerber/: apertures.rs  commands.rs  coord.rs  excellon.rs  interpreter.rs  layers.rs  lexer.rs  macros.rs  mod.rs
crates/pcb-extract/src/parsers/odbpp/: components.rs  features.rs  matrix.rs  mod.rs  symbols.rs
crates/pcb-extract/tests/: gdsii_corpus.json  gdsii_corpus.rs
crates/server/: Cargo.toml
crates/server/src/: compressed_assets.rs  gdsii_tiles.rs  github.rs  html.rs  main.rs  reparse.rs  routes.rs  s3.rs
crates/server/static/: index.html  terms.html
crates/viewer/: Cargo.toml  Trunk.toml  index.html  style.css
crates/viewer/src/: main.rs  pcbdata.rs  render.rs  state.rs
docs/: 01-pcb-data-extractor.md  02-interactive-viewer.md  03-altium-pcbdoc-parser.md  04-gdsii-tile-viewer.md
scripts/: fetch-gds-corpus.sh
tests/: test_api.py  test_generator.py
