[package]
name = "pcb-extract"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pcb-extract"
path = "src/main.rs"

[lib]
name = "pcb_extract"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
roxmltree = "0.20"
cfb = "0.14"
