[package]
name = "pcb-extract"
version.workspace = true
edition = "2021"

[[bin]]
name = "pcb-extract"
path = "src/main.rs"

[lib]
name = "pcb_extract"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = { workspace = true }
env_logger = "0.11"
roxmltree = "0.20"
cfb = "0.14"
zip = "2"
flate2 = { workspace = true }
tar = "0.4.44"
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
approx = "0.5.1"
