[package]
name = "pastebom-server"
version = "0.1.0"
edition = "2021"

[dependencies]
pcb-extract = { path = "../pcb-extract" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
aws-sdk-s3 = "1"
aws-config = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.43"
