[package]
name = "pastebom-server"
version.workspace = true
edition = "2021"

[dependencies]
pcb-extract = { path = "../pcb-extract" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "compression-gzip", "compression-br"] }
aws-sdk-s3 = "1"
aws-config = "1"
uuid = { version = "1", features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.43"
reqwest = { version = "0.13.2", features = ["json"] }
sha2 = "0.10"
hex = "0.4.3"
brotli = "8.0.2"
flate2 = { workspace = true }
mime_guess = "2.0.5"
